Add batches and chart for each batch

--- a/web/components/recipe-sections/style.less
+++ b/web/components/recipe-sections/style.less
@@ -22,7 +22,8 @@
          display: flex;
          align-items: center;
          span {
-            &.delete-icon {
+            &.delete-icon,
+            &.create-batch {
                margin-left: auto;
                font-size: 1.2em;
                cursor: pointer;
