--- a/web/components/recipe-sections/template.tpl.html
+++ b/web/components/recipe-sections/template.tpl.html
@@ -155,14 +155,9 @@
 
    </div>
    <div class="recipe-section">
-      <h3>Jästemperatur</h3>
-      <div v-if="!editable && $store.state.isLoggedIn">
-         <button class="gray" v-on:click="startFermentation" v-if="!recipe.fermStart">Starta</button>
-         <button class="red" v-on:click="stopFermentation" v-if="recipe.fermStart && !recipe.fermStop">Avsluta</button>
-      </div>
-      <div>
-         <p v-if="getLatestTemperature">Senaste avlästa temperatur: {{getLatestTemperature}}°C</p>
-         <!-- <p v-for="temp in temps">{{temp}}</p> -->
-      </div>
+      <h3>Batches
+         <span class="fa fa-plus create-batch" v-if="$store.state.isLoggedIn" v-on:click="createBatch"></span>
+      </h3>
+      <batch v-if="$store.state.selectedBatch" :batch="selectedBatch"></batch>
    </div>
 </div>
