--- a/web/style/style.less
+++ b/web/style/style.less
@@ -1,43 +1,42 @@
 @import "~font-awesome/less/font-awesome";
-
 body {
-    font-family: sans-serif;
-    padding: 0;
-    margin:0;
-    background-color: #fcfcfc;
-    font-size: 14px;
+   font-family: sans-serif;
+   padding: 0;
+   margin: 0;
+   background-color: #fcfcfc;
+   font-size: 14px;
 }
 
 #main-wrapper {
-    padding: 32px 12px 12px;
+   padding: 32px 12px 12px;
 }
 
 .row {
-    display: flex;
+   display: flex;
 }
 
 input {
-    padding: 4px;
-    font-size: 1em;
-    &.short-field {
-        max-width: 65px;
-    }
+   padding: 4px;
+   font-size: 1em;
+   &.short-field {
+      max-width: 65px;
+   }
 }
 
 button {
-    padding: 10px 16px;
-    border: none;
-    border-radius: 4px;
-    font-family: sans-serif;
-    text-transform: uppercase;
-    &.gray {
-        background-color: #9e9e9e;
-        color: #fff;
-    }
-    &.red {
-        background-color: #ef0000;
-        color: #fff;
-    }
+   padding: 10px 16px;
+   border: none;
+   border-radius: 4px;
+   font-family: sans-serif;
+   text-transform: uppercase;
+   &.gray {
+      background-color: #9e9e9e;
+      color: #fff;
+   }
+   &.red {
+      background-color: #ef0000;
+      color: #fff;
+   }
 }
 
 @import "../components/add-brew/style";
@@ -46,3 +45,4 @@ button {
 @import "../components/top-menu/style";
 @import "../components/user-menu/style";
 @import "../components/404/style";
+@import "../components/batch/style";
