--- a/web/style/style.less
+++ b/web/style/style.less
@@ -7,6 +7,17 @@ body {
    font-size: 14px;
 }
 
+a {
+   cursor: pointer;
+   text-decoration: underline;
+}
+
+p {
+   &.center-text {
+      text-align: center;
+   }
+}
+
 #main-wrapper {
    padding: 32px 12px 12px;
 }
