--- a/web/components/recipe-sections/style.less
+++ b/web/components/recipe-sections/style.less
@@ -65,6 +65,11 @@
             }
          }
       }
+      &.batches {
+         span.select-box {
+            margin-right: 12px;
+         }
+      }
    }
    .input-item {
       display: flex;
