--- a/web/style/style.less
+++ b/web/style/style.less
@@ -34,6 +34,11 @@ input {
    }
 }
 
+.right-content {
+   display: flex;
+   justify-content: flex-end;
+}
+
 button {
    padding: 10px 16px;
    border: none;
