--- a/web/style/style.less
+++ b/web/style/style.less
@@ -7,6 +7,10 @@ body {
    font-size: 14px;
 }
 
+* {
+   box-sizing: border-box;
+}
+
 a {
    cursor: pointer;
    text-decoration: underline;
@@ -45,10 +49,8 @@ button {
    border-radius: 4px;
    font-family: sans-serif;
    text-transform: uppercase;
-   &.gray {
-      background-color: #9e9e9e;
-      color: #fff;
-   }
+   background-color: #9e9e9e;
+   color: #fff;
    &.red {
       background-color: #ef0000;
       color: #fff;
