Update design on measured values some more

--- a/web/components/batch/style.less
+++ b/web/components/batch/style.less
@@ -34,6 +34,7 @@
             }
             &:disabled {
                border: none;
+               color: #000;
                &::placeholder {
                   color: transparent;
                }
