set disabled background color to white

--- a/web/components/batch/style.less
+++ b/web/components/batch/style.less
@@ -35,6 +35,7 @@
             &:disabled {
                border: none;
                color: #000;
+               background: #fff;
                &::placeholder {
                   color: transparent;
                }
