--- a/web/components/batch/style.less
+++ b/web/components/batch/style.less
@@ -1,21 +1,9 @@
 #batch {
-   h4 {
+   h4,
+   h5 {
       display: flex;
       align-items: center;
       border-bottom: 1px solid lightgray;
-      span {
-         &.fermentation-icons {
-            margin-left: auto;
-            cursor: pointer;
-            font-size: 1.5em;
-            .start-fermentation {
-               color: green;
-            }
-            .stop-fermentation {
-               color: red;
-            }
-         }
-      }
    }
    .measured-values-inputs {
       display: grid;
