--- a/web/components/batch/template.tpl.html
+++ b/web/components/batch/template.tpl.html
@@ -30,6 +30,10 @@
             <label class="input-item-title">FG (SG)</label>
             <input type="text" placeholder="1.xxx" v-model="measured_values.fg" :disabled="!$store.state.isLoggedIn">
          </div>
+         <div>
+            <p class="input-item-title">Est. ABV</p>
+            <div>{{calculatedABV}}</div>
+         </div>
       </div>
       <button @click="saveMeasuredValues" v-if="$store.state.isLoggedIn">Spara</button>
    </div>
