--- a/web/components/recipe-sections/style.less
+++ b/web/components/recipe-sections/style.less
@@ -23,10 +23,13 @@
          align-items: center;
          span {
             &.delete-icon,
-            &.create-batch {
+            &.edit-icon {
                margin-left: auto;
                font-size: 1.2em;
                cursor: pointer;
+               &:last-child {
+                  margin-left: 12px;
+               }
             }
          }
       }
