--- a/web/style/style.less
+++ b/web/style/style.less
@@ -64,3 +64,5 @@ button {
 @import "../components/user-menu/style";
 @import "../components/404/style";
 @import "../components/batch/style";
+@import "../components/dialogs/style";
+@import "../components/edit-recipe/style";
