--- a/web/components/recipe-sections/template.tpl.html
+++ b/web/components/recipe-sections/template.tpl.html
@@ -2,6 +2,7 @@
    <div class="recipe-section">
       <h3>Information
          <span class="fa fa-trash-o delete-icon" @click="deleteRecipe" v-if="!editable && $store.state.isLoggedIn"></span>
+         <span class="fa fa-edit edit-icon" @click="editRecipe" v-if="!editable && $store.state.isLoggedIn"></span>
       </h3>
       <div class="row">
 
