--- a/web/components/recipe-list/style.less
+++ b/web/components/recipe-list/style.less
@@ -1,13 +1,13 @@
-@media only screen and (min-device-width: 320px) {
+@media only screen and (min-width: 320px) {
    div#brews-wrapper {
-      display: flex;
-      flex-flow: column wrap;
+      display: grid;
+      column-gap: 12px;
+      row-gap: 12px;
+      grid-template-columns: 1fr;
+      grid-auto-rows: minmax(75px, auto);
    }
    a.brew-item {
       border: 1px solid #c5c5c5;
-      flex: 0 1 100%;
-      margin-bottom: 2%;
-      margin-right: 2%;
       text-decoration: none;
       color: #000;
       box-shadow: 2px 2px 2px 0px #d1d1d1;
@@ -32,17 +32,15 @@
    }
 }
 
-@media only screen and (min-device-width: 640px) {
+@media only screen and (min-width: 640px) {
    div#brews-wrapper {
-      flex-flow: row wrap;
-   }
-   a.brew-item {
-      flex: 0 1 30%;
+      grid-template-columns: repeat(4, 1fr);
+      grid-auto-rows: minmax(100px, auto);
    }
 }
 
-@media only screen and (min-device-width: 1280px) {
-   a.brew-item {
-      flex: 0 1 17%;
+@media only screen and (min-width: 1280px) {
+   div#brews-wrapper {
+      grid-template-columns: repeat(5, 1fr);
    }
 }
