--- a/web/components/top-menu/style.less
+++ b/web/components/top-menu/style.less
@@ -1,4 +1,4 @@
-@media only screen and (min-device-width: 320px) {
+@media only screen and (min-width: 320px) {
    #menu {
       box-shadow: 0px 8px 5px 0px rgb(217, 217, 217);
       background-color: #777777;
@@ -76,7 +76,7 @@
    }
 }
 
-@media only screen and (max-device-width: 699px) {
+@media only screen and (max-width: 699px) {
    li.menu_link-item_desktop {
       display: none;
    }
@@ -108,6 +108,7 @@
 @media only screen and (min-device-width: 700px) {
    li.menu_link-item_desktop {
       display: list-item;
+      overflow: hidden;
    }
    li.menu_link-item_mobile {
       display: none;
