Add live status from tilt

--- a/web/components/batch/style.less
+++ b/web/components/batch/style.less
@@ -31,6 +31,15 @@
          }
       }
    }
+   .live-content {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      p {
+         margin: 0;
+         display: flex;
+         flex-direction: column;
+      }
+   }
    textarea {
       width: 100%;
       height: 100px;
