--- a/web/components/recipe-list/style.less
+++ b/web/components/recipe-list/style.less
@@ -1,8 +1,8 @@
 @media only screen and (min-width: 320px) {
    div#brews-wrapper {
       display: grid;
-      column-gap: 12px;
-      row-gap: 12px;
+      grid-column-gap: 12px;
+      grid-row-gap: 12px;
       grid-template-columns: 1fr;
       grid-auto-rows: minmax(75px, auto);
    }
